core-for-CI: HAX net/phy: Suppress WARN for calling stop while halted
HAX net/phy: Suppress WARN for calling stop while halted
Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/2805
Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
Our infrastructure migration is complete. Please remember to update your SSH remote to point to ssh.gitlab.freedesktop.org; SSH to the old hostname will time out. You should not see any problems apart from that. Please let us know if you do have any other issues.
HAX net/phy: Suppress WARN for calling stop while halted
Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/2805
Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>