HAX net/phy: Suppress WARN for calling stop while halted

References: https://gitlab.freedesktop.org/drm/intel/-/issues/8046
Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/2805
Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>