drivers/net/phy/phy.c
@@ -1499,11 +1499,8 @@ void phy_stop(struct phy_device *phydev)
 	enum phy_state old_state;
 
 	if (!phy_is_started(phydev) && phydev->state != PHY_DOWN &&
-	    phydev->state != PHY_ERROR) {
-		WARN(1, "called from state %s\n",
-		     phy_state_to_str(phydev->state));
+	    phydev->state != PHY_ERROR)
 		return;
-	}
 
 	mutex_lock(&phydev->lock);
 	old_state = phydev->state;
